<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shared"
    android:background="@color/background">

    <EditText
        android:id="@+id/Nom"
        android:textSize="@dimen/text"
        android:layout_margin="@dimen/margeInt"
        android:hint="@string/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/Prénom"
        android:textSize="@dimen/text"
        android:layout_margin="@dimen/margeInt"
        android:hint="@string/prénom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Nom"
        />

    <EditText
        android:id="@+id/mail"
        android:textSize="@dimen/text"
        android:layout_margin="@dimen/margeInt"
        android:hint="@string/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Prénom"

        />

    <EditText
        android:id="@+id/Phone"
        android:textSize="@dimen/text"
        android:layout_margin="@dimen/margeInt"
        android:hint="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:layout_below="@id/Phone"
        android:layout_marginTop="@dimen/marginTopButton"
    />
</RelativeLayout>